added ccp and updated narratives - also edited css to size images and fonts

--- a/academic.html
+++ b/academic.html
@@ -26,18 +26,18 @@
 <!--                    <p class="penn_text text3"></p>-->
 <!--                </div>-->
 <!--            </div>-->
-<!--            <div class="row">-->
-<!--                <div class="col-md-3 ctrimg background-color: #FBC603">-->
-<!--                    <img src="Images/CCP-Logo.jpg" alt="Community College of Philadelphia Logo" class="image">-->
-<!--                </div>-->
-<!--                <div class="col-md-9 ccp w-100vw p-.5em">-->
-<!--                    <p class="ccp_text text1">Community College of Philadelphia</p>-->
-<!--                    <p class="ccp_text text2">Philadelphia, Pennsylvania (Virtual)</p>-->
-<!--                    <p class="ccp_text text2">PreCalculus</p>-->
-<!--                    <p class="ccp_text text2">2023 - 2023</p>-->
-<!--                    <p class="ccp_text text3">I took a class in PreCalculus to satisfy a prerequisite to courses I would need to take at Penn State University to get my Computer Science Degree.</p>-->
-<!--                </div>-->
-<!--            </div>-->
+            <div class="row">
+                <div class="col-md-3 ctrimg background-color: #FBC603">
+                    <img src="Images/CCP-Logo.jpg" alt="Community College of Philadelphia Logo" class="image">
+                </div>
+                <div class="col-md-9 ccp w-100vw p-.5em">
+                    <p class="ccp_text text1">Community College of Philadelphia</p>
+                    <p class="ccp_text text2">Philadelphia, Pennsylvania (Virtual)</p>
+                    <p class="ccp_text text2">PreCalculus</p>
+                    <p class="ccp_text text2">2023 - 2024</p>
+                    <p class="ccp_text text3">I'm beginning to pursue my Computer Science degree by taking 4 classes.  They are Precalculus, Computer Science I, English Composition I, and Elementary Spanish.  The Precalculus class is a prerequisite for Calculus which I will be taking once I transfer to Penn State.</p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-3 ctrimg background-color: #7CB342">
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
@@ -57,9 +57,9 @@
                 <div class="col-md-9 devry w-100vw p-.5em">
                     <p class="devry_text text1"> DeVry College of New York</p>
                     <p class="devry_text text2">New York City, New York</p>
-                    <p class="devry_text text2">Computer Networking and basic classes</p>
+                    <p class="devry_text text2">Computer Information Systems</p>
                     <p class="devry_text text2">2015 - 2020</p>
-                    <p class="devry_text text3">At DeVry College of New York I took many basic classes needed for entry into college courses.  I was unable to complete my degree as courses I needed to take were not compatible with the veteran program I was attending under.</p>
+                    <p class="devry_text text3">At DeVry College of New York, I took many general education classes including; Algebra, Composition, Statistics, Critical Thinking, Professional Writing, Economics, and Health and Wellness.  I also took classes specific to computer systems such as; Computer Apps For Business, Intro to Business & Technology, Financial Accounting, Data Analysis with Spreadsheets, Database Essentials for Business, Marketing, and Principals of Management.  I was unable to complete my degree as courses I needed to take were not compatible with the veteran program under which I was attending.</p>
                 </div>
             </div>
             <div class="row">
@@ -71,7 +71,7 @@
                     <p class="ccaf_text text2">Various Locations</p>
                     <p class="ccaf_text text2">Basic, Airman Leadership School, Aviation Mechanic, Aerial Port</p>
                     <p class="ccaf_text text2">1997 – 2012</p>
-                    <p class="ccaf_text text3">Throughout my career in the Air National Guard, in Nevada, California and New Jersey, I attained many skills.  I changed careers from Aerial Port back to vehicle mechanics and eventually into aircraft maintenance.  The military has taught me many skills in leadership, and working alone, with a team, or as a leader of a team to accomplish tasks and goals to complete a mission.</p>
+                    <p class="ccaf_text text3">Throughout my career in the Air National Guard, I attained many skills and leadership abilities.  I worked on computers, taking classes on how to perform tasks with different job duties, I earned certificates such as Air Force Trainer, and Air Force Trainer/Certifier. I learned to accomplish missions working alone, with a team, or as a leader of a team to complete a mission.</p>
                 </div>
             </div>
             <div class="row">
@@ -83,7 +83,7 @@
                     <p class="usmc2_text text2">29 Palms, California</p>
                     <p class="usmc2_text text2">M936 Wrecker Operator</p>
                     <p class="usmc2_text text2">1991</p>
-                    <p class="usmc2_text text3">As Operation Desert Storm was winding down, I was sent to Wrecker Operator class in 29 Palms, California.  I learned basic recovery techniques, welding (using arc welders and oxygen/acetylene torch), among other skills.  I graduated and returned to my unit.</p>
+                    <p class="usmc2_text text3">During Operation Desert Storm, I was sent to Wrecker Operator class in 29 Palms, California.  The M936 Wrecker is a 5-Ton tow truck with a rotating boom.  I learned basic vehicle recovery techniques, welding (using arc welders and oxygen/acetylene torch), winching skills, and towing skills.  I graduated and returned to my unit.</p>
                 </div>
             </div>
             <div class="row">
