changed degree and removed (virtual) from ccp

--- a/academic.html
+++ b/academic.html
@@ -32,8 +32,8 @@
                 </div>
                 <div class="col-md-9 ccp w-100vw p-.5em">
                     <p class="ccp_text text1">Community College of Philadelphia</p>
-                    <p class="ccp_text text2">Philadelphia, Pennsylvania (Virtual)</p>
-                    <p class="ccp_text text2">PreCalculus</p>
+                    <p class="ccp_text text2">Philadelphia, Pennsylvania</p>
+                    <p class="ccp_text text2">Computer Science</p>
                     <p class="ccp_text text2">2023 - 2024</p>
                     <p class="ccp_text text3">I'm beginning to pursue my Computer Science degree by taking 4 classes.  They are Precalculus, Computer Science I, English Composition I, and Elementary Spanish.  The Precalculus class is a prerequisite for Calculus which I will be taking once I transfer to Penn State.</p>
                 </div>
