--- a/work_history.html
+++ b/work_history.html
@@ -10,13 +10,13 @@
 </head>
 <body class="work">
 <div class="container-fluid">
-    <div id="vetInd" class=" border: 2px solid black">
-        <h2>Veteran Industries</h2>
-        <p class="year">2018 - 2019</p>
-        <p class="location">Coatesville, Pennsylvania</p>
-        <p id="vidd">Assisted veterans using computers to file/check their benefits, claims, email, and search for housing and
+    <div id="vetInd" class="border: 2px solid black">
+        <h2 class="text1">Veteran Industries</h2>
+        <p class="year text2">2018 - 2019</p>
+        <p class="location text2">Coatesville, Pennsylvania</p>
+        <p id="vidd" class="text3">Assisted veterans using computers to file/check their benefits, claims, email, and search for housing and
             employment.</p>
-        <p id="vidt">This business is a government program located at the Coatesville VA Medical Center. It is designed to assist
+        <p id="vidt" class="text3">This business is a government program located at the Coatesville VA Medical Center. It is designed to assist
             veterans
             find employment, housing and apply for benefits they may qualify for. I was employed in the Computer Room
             and I
@@ -29,12 +29,12 @@
             answered users' inquiries regarding computer software and hardware operation to resolve problems that
             occurred.</p>
     </div>
-    <div class=" border: 2px solid black bg-dark">
-        <h2>Uber</h2>
-        <p class="year">2015 - 2018</p>
-        <p class="location">New Jersey/Pennsylvania/Delaware/New York</p>
-        <p>Driver/Partner</p>
-        <p>I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
+    <div class="border: 2px solid black bg-dark">
+        <h2 class="text1">Uber</h2>
+        <p class="year text2">2015 - 2018</p>
+        <p class="location text2">New Jersey/Pennsylvania/Delaware/New York</p>
+        <p class="text3">Driver/Partner</p>
+        <p class="text3">I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
             cleaners,
             fuel,
             lubricants and accessories. I assisted disabled passengers into and out of my vehicle. Operated phone
@@ -43,12 +43,12 @@
             mileage,
             costs, revenue and expenses and reported inappropriate behavior of passengers.</p>
     </div>
-    <div id="lyft" class=" border: 2px solid black">
-        <h2>Lyft</h2>
-        <p class="year">2017 - 2018</p>
-        <p class="location">New Jersey/Pennsylvania/Delaware/New York</p>
-        <p id="lydd">Driver/Partner</p>
-        <p id="lyftt">I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
+    <div id="lyft" class="border: 20px solid black">
+        <h2 class="text1">Lyft</h2>
+        <p class="year text2">2017 - 2018</p>
+        <p class="location text2">New Jersey/Pennsylvania/Delaware/New York</p>
+        <p id="lydd" class="text3">Driver/Partner</p>
+        <p id="lyftt" class="text3">I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
             cleaners,
             fuel,
             lubricants and accessories. I assisted disabled passengers into and out of my vehicle. Operated phone
@@ -58,11 +58,11 @@
             costs, revenue and expenses and reported inappropriate behavior of passengers.</p>
     </div>
     <div class=" border: 2px solid black bg-info">
-        <h2>New Jersey Air National Guard</h2>
-        <p class="year">2003 - 2012</p>
-        <p class="location">Joint Base McGuire/Dix/Lakehurst, New Jersey</p>
-        <p id="njang">General Aircraft Mechanic</p>
-        <p id="njangt">In 2003, I moved to New Jersey where I was trained as an aircraft mechanic on KC-135E/R Stratotanker
+        <h2 class="text1">New Jersey Air National Guard</h2>
+        <p class="year text2">2003 - 2012</p>
+        <p class="location text2">Joint Base McGuire/Dix/Lakehurst, New Jersey</p>
+        <p id="njang" class="text3">General Aircraft Mechanic</p>
+        <p id="njangt" class="text3">In 2003, I moved to New Jersey where I was trained as an aircraft mechanic on KC-135E/R Stratotanker
             refueling
             airplanes. While at McGuire, I was trained to repair, service and refuel aircraft. I was trained on powered
             and
@@ -77,10 +77,11 @@
             an Honorable Discharge.</p>
     </div>
     <div class=" border: 2px solid black bg-info">
-        <h2>California Air National Guard</h2>
-        <p class="year">2000 - 2002</p>
-        <p class="location">San Diego, California</p>
-        <p id="cangt">Vehicle Mechanic/Secure Communications - At the end of 1999, I moved to San Diego where I was going to
+        <h2 class="text1">California Air National Guard</h2>
+        <p class="year text2">2000 - 2002</p>
+        <p class="location text2">San Diego, California</p>
+        <p id="cangdd" class="text3">Vehicle Mechanic/Secure Communications</p>
+        <p id="cangt" class="text3">At the end of 1999, I moved to San Diego where I was going to
             continue
             service in the Nevada Air National Guard. I discovered there was an Air National Guard Station near my home,
             so
@@ -99,10 +100,11 @@
             my position was dissolved.</p>
     </div>
     <div class=" border: 2px solid black bg-info">
-        <h2>Nevada Air National Guard</h2>
-        <p class="year">1997 - 1999</p>
-        <p class="location">Reno, Nevada</p>
-        <p id="angt">Aerial Port - In September 1997, I joined the Air National Guard located at the Reno
+        <h2 class="text1">Nevada Air National Guard</h2>
+        <p class="year text2">1997 - 1999</p>
+        <p class="location text2">Reno, Nevada</p>
+        <p id="angdd" class="text3">Aerial Port</p>
+        <p id="angt" class="text3"> In September 1997, I joined the Air National Guard located at the Reno
             International Airport. The Aerial Port handles all manner of duties associated with air travel. Most of the
             positions you see at the airport are handled by Aerial Port. Passenger Service, Food Service/Crew &
             Passenger
@@ -120,21 +122,18 @@
             of pallets after they were dropped, and other (civilian-type) vehicles.</p>
     </div>
     <div id="apt" class=" border: 2px solid black">
-        <h2 id="atpt">All Points Towing</h2>
-        <p class="year">1995 - 1999</p>
-        <p class="location">Reno, Nevada</p>
-        <p id="aptt">Tow Truck Operator, Night Tow Manager, Dispatcher, Vehicle Mechanic, Long Haul
-            Specialist,
-            Nationally Certified Tow Operator</p>
-        <p></p>
+        <h2 id="atpt" class="text1">All Points Towing</h2>
+        <p class="year text2">1995 - 1999</p>
+        <p class="location text2">Reno, Nevada</p>
+        <p id="aptdd" class="text3">Tow Truck Operator, Night Tow Manager, Dispatcher, Vehicle Mechanic, Long Haul Specialist, Nationally Certified Tow Operator</p>
+        <p id="apttt" class="text3">I started with All Points Towing as a tow truck operator after speaking with the owner and asking him what he needed.  His reply was "Drivers!".  I worked the overnight shift and as my seniority grew, I eventually became the person other drivers would turn to for instructions or advise.  Over time, I acquired a knack for taking customers of AAA and All Points to their home cities instead of returning to Reno.  With my background as a mechanic, when the company needed someone to repair the trucks, I worked to keep the fleet on the road.  I assisted the dispatchers with coordinating drivers and connecting them with customers to keep the time spent on the side of the road to a minimum.  My experience as an operator helped me as I often put myself in the place of the operators on the road.  At one point, the opportunity arose to travel to Las Vegas to be tested as a Nationally Certified Tow Operator.  I passed.</p>
     </div>
     <div class=" border: 2px solid black bg-danger">
-        <h2>United States Marine Corps/Marine Corps Reserves</h2>
-        <p class="year">1987 - 1995</p>
-        <p class="location">Various Locations</p>
-        <p id="mcdt">Basic Rifleman, Vehicle Mechanic, Wrecker Operator, Vehicle Driver, F/A - 18 Hornet Aircraft
-            Mechanic</p>
-        <p></p>
+        <h2 class="text1">United States Marine Corps/Marine Corps Reserves</h2>
+        <p class="year text2">1987 - 1995</p>
+        <p class="location text2">Various Locations</p>
+        <p id="mcdd" class="text3">Basic Rifleman, Vehicle Mechanic, Wrecker Operator, Vehicle Driver, F/A - 18 Hornet Aircraft Mechanic</p>
+        <p id="mctt" class="text3">I joined the United States Marine Corps on January 15, 1987, in the delayed entry program.  I left for boot camp on May 26 and began my military career.</p>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
