--- a/work_history.html
+++ b/work_history.html
@@ -33,8 +33,8 @@
         <h2 class="text1">Uber</h2>
         <p class="year text2">2015 - 2018</p>
         <p class="location text2">New Jersey/Pennsylvania/Delaware/New York</p>
-        <p class="text3">Driver/Partner</p>
-        <p class="text3">I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
+        <p id="uberdd" class="text3">Driver/Partner</p>
+        <p id="ubertt" class="text3">I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
             cleaners,
             fuel,
             lubricants and accessories. I assisted disabled passengers into and out of my vehicle. Operated phone
