completed work history

--- a/work_history.html
+++ b/work_history.html
@@ -14,8 +14,7 @@
         <h2 class="text1">Veteran Industries</h2>
         <p class="year text2">2018 - 2019</p>
         <p class="location text2">Coatesville, Pennsylvania</p>
-        <p id="vidd" class="text3">Assisted veterans using computers to file/check their benefits, claims, email, and search for housing and
-            employment.</p>
+        <p id="vidd" class="text3">Computer Room Assistant</p>
         <p id="vidt" class="text3">This business is a government program located at the Coatesville VA Medical Center. It is designed to assist
             veterans
             find employment, housing and apply for benefits they may qualify for. I was employed in the Computer Room
@@ -43,7 +42,7 @@
             mileage,
             costs, revenue and expenses and reported inappropriate behavior of passengers.</p>
     </div>
-    <div id="lyft" class="border: 20px solid black">
+    <div id="lyft" class="border: 2px solid black">
         <h2 class="text1">Lyft</h2>
         <p class="year text2">2017 - 2018</p>
         <p class="location text2">New Jersey/Pennsylvania/Delaware/New York</p>
@@ -53,7 +52,7 @@
             fuel,
             lubricants and accessories. I assisted disabled passengers into and out of my vehicle. Operated phone
             applications
-            to communicate with Uber for locations of passengers and drop-off locations and kept records of trips,
+            to communicate with Lyft for locations of passengers and drop-off locations and kept records of trips,
             mileage,
             costs, revenue and expenses and reported inappropriate behavior of passengers.</p>
     </div>
@@ -64,7 +63,7 @@
         <p id="njang" class="text3">General Aircraft Mechanic</p>
         <p id="njangt" class="text3">In 2003, I moved to New Jersey where I was trained as an aircraft mechanic on KC-135E/R Stratotanker
             refueling
-            airplanes. While at McGuire, I was trained to repair, service and refuel aircraft. I was trained on powered
+            airplanes. While at McGuire (later renamed Joint Base McGuire/Fort Dix/Lakehurst), I was trained to repair, service and refuel aircraft. I was trained on powered
             and
             non-powered support equipment such as generators, air conditioning units, gaseous oxygen servicing
             equipment,
@@ -106,7 +105,7 @@
         <p id="angdd" class="text3">Aerial Port</p>
         <p id="angt" class="text3"> In September 1997, I joined the Air National Guard located at the Reno
             International Airport. The Aerial Port handles all manner of duties associated with air travel. Most of the
-            positions you see at the airport are handled by Aerial Port. Passenger Service, Food Service/Crew &
+            positions you see at the airport are handled by Aerial Port i.e. Passenger Service, Food Service/Crew &
             Passenger
             Meals,
             and Cargo Loading. In Reno, the main mission was Air Drop which centered around dropping pallets or
@@ -123,7 +122,7 @@
     </div>
     <div id="apt" class=" border: 2px solid black">
         <h2 id="atpt" class="text1">All Points Towing</h2>
-        <p class="year text2">1995 - 1999</p>
+        <p class="year text2">1996 - 1999</p>
         <p class="location text2">Reno, Nevada</p>
         <p id="aptdd" class="text3">Tow Truck Operator, Night Tow Manager, Dispatcher, Vehicle Mechanic, Long Haul Specialist, Nationally Certified Tow Operator</p>
         <p id="apttt" class="text3">I started with All Points Towing as a tow truck operator after speaking with the owner and asking him what he needed.  His reply was "Drivers!".  I worked the overnight shift and as my seniority grew, I eventually became the person other drivers would turn to for instructions or advise.  Over time, I acquired a knack for taking customers of AAA and All Points to their home cities instead of returning to Reno.  With my background as a mechanic, when the company needed someone to repair the trucks, I worked to keep the fleet on the road.  I assisted the dispatchers with coordinating drivers and connecting them with customers to keep the time spent on the side of the road to a minimum.  My experience as an operator helped me as I often put myself in the place of the operators on the road.  At one point, the opportunity arose to travel to Las Vegas to be tested as a Nationally Certified Tow Operator.  I passed.</p>
@@ -133,7 +132,7 @@
         <p class="year text2">1987 - 1995</p>
         <p class="location text2">Various Locations</p>
         <p id="mcdd" class="text3">Basic Rifleman, Vehicle Mechanic, Wrecker Operator, Vehicle Driver, F/A - 18 Hornet Aircraft Mechanic</p>
-        <p id="mctt" class="text3">I joined the United States Marine Corps on January 15, 1987, in the delayed entry program.  I left for boot camp on May 26 and began my military career.</p>
+        <p id="mctt" class="text3">I joined the United States Marine Corps on January 15, 1987, in the delayed entry program.  I left for boot camp on May 26 and began my military career.  Throughout my Marine Corps career, I was a Vehicle Mechanic, M-936 Wrecker Operator, and an F-18A Hornet General Aviation Mechanic. I also held an over-the-road driver's license for all the equipment I worked on.  Among other locations, I served at Marine Corps Base Camp LeJeune, Camp Johnson, NAS/MCAS Miramar, Camp Pendleton, and 29 Palms.</p>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
