modified language and elaborated on classes taken and descriptions

--- a/academic.html
+++ b/academic.html
@@ -23,7 +23,7 @@
 <!--                    <p class="penn_text text2">Harrisburg, Pennsylvania</p>-->
 <!--                    <p class="penn_text text2">Bachelors Degree - Computer Science</p>-->
 <!--                    <p class="penn_text text2">2024 - 2026</p>-->
-<!--                    <p class="penn_text text3"></p>-->
+<!--                    <p class="penn_text text3">At Penn State, I'm completing my bachelors degree in Computer Science.</p>-->
 <!--                </div>-->
 <!--            </div>-->
             <div class="row">
@@ -35,7 +35,7 @@
                     <p class="ccp_text text2">Philadelphia, Pennsylvania</p>
                     <p class="ccp_text text2">Computer Science</p>
                     <p class="ccp_text text2">2023 - 2024</p>
-                    <p class="ccp_text text3">I'm beginning to pursue my Computer Science degree by taking 4 classes.  They are Precalculus, Computer Science I, English Composition I, and Elementary Spanish.  The Precalculus class is a prerequisite for Calculus which I will be taking once I transfer to Penn State.</p>
+                    <p class="ccp_text text3">I'm pursuing my Computer Science degree by taking 4 classes.  They are Precalculus, Computer Science I, English Composition I, and Elementary Spanish.  The Precalculus class is a prerequisite for Calculus which I will be taking once I transfer to Penn State.</p>
                 </div>
             </div>
             <div class="row">
@@ -47,7 +47,7 @@
                     <p class="codeup_text text2">San Antonio, Texas (Virtual)</p>
                     <p class="codeup_text text2">Full Stack Web Developer</p>
                     <p class="codeup_text text2">2022 - 2023</p>
-                    <p class="codeup_text text3">At Codeup, I received education and training as a Full Stack Web Developer.  I have become quite proficient in front end creation and am currently working on back-end and full program creation.</p>
+                    <p class="codeup_text text3">At Codeup, I received education and training as a Full Stack Web Developer.  I have become quite proficient in front end creation and am currently working on back-end and full stack program creation.</p>
                 </div>
             </div>
             <div class="row">
@@ -55,7 +55,7 @@
                     <img src="Images/DeVry_Icon.jpg" alt="DeVry Icon" class="image">
                 </div>
                 <div class="col-md-9 devry w-100vw p-.5em">
-                    <p class="devry_text text1"> DeVry College of New York</p>
+                    <p class="devry_text text1">DeVry College of New York</p>
                     <p class="devry_text text2">New York City, New York</p>
                     <p class="devry_text text2">Computer Information Systems</p>
                     <p class="devry_text text2">2015 - 2020</p>
@@ -69,7 +69,7 @@
                 <div class="col-md-9 ccaf">
                     <p class="ccaf_text text1">Community College of The Air Force</p>
                     <p class="ccaf_text text2">Various Locations</p>
-                    <p class="ccaf_text text2">Basic, Airman Leadership School, Aviation Mechanic, Aerial Port</p>
+                    <p class="ccaf_text text2">Basic, Airman Leadership School, Aviation Mechanic, Aerial Port, Air Force Trainer, Air Force Trainer/Certifier</p>
                     <p class="ccaf_text text2">1997 – 2012</p>
                     <p class="ccaf_text text3">Throughout my career in the Air National Guard, I attained many skills and leadership abilities.  I worked on computers, taking classes on how to perform tasks with different job duties, I earned certificates such as Air Force Trainer, and Air Force Trainer/Certifier. I learned to accomplish missions working alone, with a team, or as a leader of a team to complete a mission.</p>
                 </div>
@@ -79,11 +79,11 @@
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
                 <div class="col-md-9 usmc2 p-.5em">
-                    <p class="usmc2_text text1"> Marine Corps Service Support Schools</p>
+                    <p class="usmc2_text text1">Marine Corps Service Support Schools</p>
                     <p class="usmc2_text text2">29 Palms, California</p>
                     <p class="usmc2_text text2">M936 Wrecker Operator</p>
                     <p class="usmc2_text text2">1991</p>
-                    <p class="usmc2_text text3">During Operation Desert Storm, I was sent to Wrecker Operator class in 29 Palms, California.  The M936 Wrecker is a 5-Ton tow truck with a rotating boom.  I learned basic vehicle recovery techniques, welding (using arc welders and oxygen/acetylene torch), winching skills, and towing skills.  I graduated and returned to my unit.</p>
+                    <p class="usmc2_text text3">During Operation Desert Storm, I was sent to Wrecker Operator class in 29 Palms, California.  The M936 Wrecker is a 5-Ton tow truck with a rotating boom.  I learned basic vehicle recovery techniques, welding (using arc welders and oxygen/acetylene torch), winching and towing skills.  I graduated and returned to my unit.</p>
                 </div>
             </div>
             <div class="row">
@@ -115,7 +115,7 @@
                     <img src="Images/Madison_High_Icon.jpg" alt="Madison High School Icon" class="image">
                 </div>
                 <div class="col-md-9 madison p-.5em background-color: #1F2C4C">
-                    <p class="madison_text text1"> James Madison High School</p>
+                    <p class="madison_text text1">James Madison High School</p>
                     <p class="madison_text text2">San Diego, California</p>
                     <p class="madison_text text2">Basic and Auto Mechanics</p>
                     <p class="madison_text text2">1983 - 1986</p>
