--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -43,8 +43,8 @@
         <img src="Images/certificate_of%20_appreciation_barak_obama.jpg" alt="Certificate of Appreciation From President Barak Obama">
         <img src="Images/certificate_of_retirement.jpg" alt="Certificate of Retirement from the United States Air Force">
         <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg" alt="Air National Guard Honorable Discharge Certificate">
-        <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge">
-        <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge">
+<!--        <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge">-->
+<!--        <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge">-->
         <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
              alt="Certificate of Recognition - Service During The Cold War">
         <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
@@ -57,6 +57,8 @@
     <h2>Awards and Achievements Without Pictures</h2>
     <hr>
     <ul>
+        <li>Honorable Discharge - California Air National Guard</li>
+        <li>Honorable Discharge - Nevada Air National Guard</li>
         <li>Meritorious Mast</li>
         <li>Driver's License for commercial (civilian) and tactical (military) vehicles</li>
         <li>Air Force Trainer Certificate</li>
