fixed issue with descriptions covering images on academic page until 768px

--- a/academic.html
+++ b/academic.html
@@ -15,10 +15,10 @@
     <div class="container m-0 p-0">
         <div class="container">
 <!--            <div class="row">-->
-<!--                <div class="col-md-3 ctrimg background-color: #00225A">-->
+<!--                <div class="col-lg-4 ctrimg background-color: #00225A">-->
 <!--                    <img src="Images/Penn_State_Logo.jpg" alt="Penn State Logo" class="image">-->
 <!--                </div>-->
-<!--                <div class="col-md-9 penn w-100vw p-.5em">-->
+<!--                <div class="col-lg-8 penn w-100vw p-.5em">-->
 <!--                    <p class="penn_text text1">Penn State University</p>-->
 <!--                    <p class="penn_text text2">Harrisburg, Pennsylvania</p>-->
 <!--                    <p class="penn_text text2">Bachelors Degree - Computer Science</p>-->
@@ -27,10 +27,10 @@
 <!--                </div>-->
 <!--            </div>-->
             <div class="row">
-                <div class="col-md-3 ctrimg background-color: #FBC603">
+                <div class="col-lg-4 ctrimg background-color: #FBC603">
                     <img src="Images/CCP-Logo.jpg" alt="Community College of Philadelphia Logo" class="image">
                 </div>
-                <div class="col-md-9 ccp w-100vw p-.5em">
+                <div class="col-lg-8 ccp w-100vw p-.5em">
                     <p class="ccp_text text1">Community College of Philadelphia</p>
                     <p class="ccp_text text2">Philadelphia, Pennsylvania</p>
                     <p class="ccp_text text2">Computer Science</p>
@@ -39,10 +39,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 ctrimg background-color: #7CB342">
+                <div class="col-lg-4 ctrimg background-color: #7CB342">
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
                 </div>
-                <div class="col-md-9 codeup w-100vw p-.5em">
+                <div class="col-lg-8 codeup w-100vw p-.5em">
                     <p class="codeup_text text1">Codeup</p>
                     <p class="codeup_text text2">San Antonio, Texas (Virtual)</p>
                     <p class="codeup_text text2">Full Stack Web Developer</p>
@@ -51,10 +51,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 ctrimg">
+                <div class="col-lg-4 ctrimg">
                     <img src="Images/DeVry_Icon.jpg" alt="DeVry Icon" class="image">
                 </div>
-                <div class="col-md-9 devry w-100vw p-.5em">
+                <div class="col-lg-8 devry w-100vw p-.5em">
                     <p class="devry_text text1">DeVry College of New York</p>
                     <p class="devry_text text2">New York City, New York</p>
                     <p class="devry_text text2">Computer Information Systems</p>
@@ -63,10 +63,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 ctrimg">
+                <div class="col-lg-4 ctrimg">
                     <img src="Images/CCAF_Icon.jpg" alt="Community College Of The Air Force Icon" class="image">
                 </div>
-                <div class="col-md-9 ccaf">
+                <div class="col-lg-8 ccaf">
                     <p class="ccaf_text text1">Community College of The Air Force</p>
                     <p class="ccaf_text text2">Various Locations</p>
                     <p class="ccaf_text text2">Basic, Airman Leadership School, Aviation Mechanic, Aerial Port, Air Force Trainer, Air Force Trainer/Certifier</p>
@@ -75,10 +75,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 ctrimg">
+                <div class="col-lg-4 ctrimg">
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
-                <div class="col-md-9 usmc2 p-.5em">
+                <div class="col-lg-8 usmc2 p-.5em">
                     <p class="usmc2_text text1">Marine Corps Service Support Schools</p>
                     <p class="usmc2_text text2">29 Palms, California</p>
                     <p class="usmc2_text text2">M936 Wrecker Operator</p>
@@ -87,10 +87,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 ctrimg">
+                <div class="col-lg-4 ctrimg">
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
-                <div class="col-md-9 usmc1 p-.5em">
+                <div class="col-lg-8 usmc1 p-.5em">
                     <p class="usmc1_text text1"> Marine Corps Service Support Schools</p>
                     <p class="usmc1_text text2">Camp LeJeune, North Carolina</p>
                     <p class="usmc1_text text2">Auto and Diesel Mechanics</p>
@@ -99,10 +99,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 ctrimg">
+                <div class="col-lg-4 ctrimg">
                     <img src="Images/Miramar_College_Icon.jpg" alt="Miramar College Icon" id="miramar">
                 </div>
-                <div class="col-md-9 miramar p-.5em">
+                <div class="col-lg-8 miramar p-.5em">
                     <p class="miramar_text text1">Miramar College</p>
                     <p class="miramar_text text2">San Diego, California</p>
                     <p class="miramar_text text2">Diesel Mechanics</p>
@@ -111,10 +111,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 ctrimg">
+                <div class="col-lg-4 ctrimg">
                     <img src="Images/Madison_High_Icon.jpg" alt="Madison High School Icon" class="image">
                 </div>
-                <div class="col-md-9 madison p-.5em background-color: #1F2C4C">
+                <div class="col-lg-8 madison p-.5em background-color: #1F2C4C">
                     <p class="madison_text text1">James Madison High School</p>
                     <p class="madison_text text2">San Diego, California</p>
                     <p class="madison_text text2">Basic and Auto Mechanics</p>
