--- a/development_projects.html
+++ b/development_projects.html
@@ -14,36 +14,36 @@
             <li>Resume web page</li>
         </a>
         <a href="https://github.com/MarcusandRalphorg/media-queries">
-            <li>Codeup Media Queries Marcus/Ralph</li>
+            <li>Codeup Media Queries (Marcus/Ralph)</li>
         </a>
         <a href="https://github.com/Leonard-Ralph-Jesse-org/responsive-site">
-            <li>Codeup Responsive Site Leonard/Ralph/Jesse</li>
+            <li>Codeup Responsive Site (Leonard/Ralph/Jesse)</li>
         </a>
         <a href="https://github.com/ortiz-mccloskey-urton-project/coffee-project">
-            <li>Codeup Coffee Project Ortiz/McCloskey/Urton</li>
+            <li>Codeup Coffee Project (Ortiz/McCloskey/Urton)</li>
         </a>
         <a href="https://github.com/mccloskey-hall-media-queries/media-queries-exercise">
-            <li>Codeup Media Queries McCloskey/Hall</li>
+            <li>Codeup Media Queries (McCloskey/Hall)</li>
         </a>
         <a href="https://github.com/Neely-McCloskey/codeup-design-project">
-            <li>Codeup Design Project Neely/McCloskey</li>
+            <li>Codeup Design Project (Neely/McCloskey)</li>
         </a>
         <a href="https://github.com/orgs/McCloskey-Ramos-Coffee-Project/repositories">
-            <li>Coffee Project McCloskey/Ramos</li>
+            <li>Coffee Project (McCloskey/Ramos)</li>
         </a>
         <a href="https://github.com/Rafagithub135/Weathermap">
-            <li>Weather Map</li>
+            <li>Weather Map (McCloskey)</li>
         </a>
         <a href="https://github.com/Villegas-McCloskey-Movies/Movie-Project">
-            <li>Movie Project Villegas/McCloskey</li>
+            <li>Movie Project (Villegas/McCloskey)</li>
         </a>
         <a href="https://github.com/Rafagithub135/Games/tree/main/War">
-            <li>War Card Game Web Dev Simplified/McCloskey</li>
+            <li>War Card Game (Web Dev Simplified/McCloskey)</li>
         </a>
-        <a href="https://sandlotconnect.xyz:8080/"><li>Sandlot Connect - A social media platform assisting sandlot baseball teams in an area connect and organize teams/leagues.  Wilson/McCloskey/Razo</li>
+        <a href="https://sandlotconnect.xyz:8080/"><li>Sandlot Connect (Wilson/McCloskey/Razo)</li>
         </a>
         <a href="https://github.com/Rafagithub135/cookie">
-            <li>Cookie's Place website I'm currently working on.</li>
+            <li>Cookie's Place website (McCloskey - I'm currently working on this site)</li>
         </a>
     </ol>
 </div>
