--- a/development_projects.html
+++ b/development_projects.html
@@ -11,7 +11,7 @@
 <div>
     <ol>
         <a href="https://rafagithub135.github.io/">
-            <li>Resume web page</li>
+            <li>Resume web page (McCloskey)</li>
         </a>
         <a href="https://github.com/MarcusandRalphorg/media-queries">
             <li>Codeup Media Queries (Marcus/Ralph)</li>
