added marine corps veteran icon to main index page and styled

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                     <div class="container">
                         <div class="row row-cols-3">
                             <div class="col-4">
-                                <ul id="skills-list1" class="col-md-4 m-0"></ul>
+                                <ul id="skills-list1" class="col-lg-4"></ul>
                             </div>
                             <div class="col-4">
-                                <ul id="skills-list2" class="col-md-4 m-0"></ul>
+                                <ul id="skills-list2" class="col-lg-4"></ul>
                             </div>
                             <div class="col-4">
-                                <ul id="skills-list3" class="col-md-4 m-0"></ul>
+                                <ul id="skills-list3" class="col-lg-4"></ul>
                             </div>
                         </div>
                     </div>
@@ -114,6 +114,8 @@
             <hr class="sand">
             <section class="col-md-12 mx-auto">
                 <div class="d-flex justify-content-center">
+                    <a href="https://www.marines.com"><img src="Images/usmcveteranpin.jpg"
+                                                           alt="United States Marine Corps Veteran" id="usmcvet"></a>
                     <a href="https://www.airforce.com"><img src="Images/air-force-veteran.png" alt="United States Air Force Veteran" id="afvet"></a>
                 </div>
             </section>
