centered text for ribbons and certs

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -55,7 +55,7 @@
     </section>
     <h2>Awards and Achievements Without Pictures</h2>
     <hr>
-    <ul>
+    <ul class="nonphoto">
         <li>Honorable Discharge - California Air National Guard</li>
         <li>Honorable Discharge - Nevada Air National Guard</li>
         <li>Meritorious Mast</li>
