--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </section>
         </div>
         <div class="narrative">
-            <h2>Full Stack Web Developer</h2>
+            <h2 class="title">Full Stack Web Developer</h2>
             <!--The id="age" is calculating the number of years I have held a job so the website will update automatically.-->
             <p id="mtd">With over <span id="age"></span> years in a wide array of career fields I have had many
                 experiences that
