--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
                             href="awards_decorations.html">click here.</a></p>
                 </div>
             </section>
+            <section class="col-md-6">
+                <div class="reference-links mt-0 row row-md-2">
+                    <h3 class="text-primary"><a href="encoding.html">ENCODE A WORD, SENTENCE, OR PARAGRAPH</a></h3>
+                    <p class="link">If you would like to encode a word, sentence, or paragraph, I have created a program to do so.  Just
+                        <a href="encoding.html">click here</a> to go to the page.</p>
+                </div>
+            </section>
             <hr class="sand">
             <section class="col-md-12 mx-auto">
                 <div class="d-flex justify-content-center">
