changed title to front end as I still need some training in back end

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </section>
         </div>
         <div class="narrative">
-            <h2 class="title">Full Stack Web Developer</h2>
+            <h2 class="title">Front End Web Developer</h2>
             <!--The id="age" is calculating the number of years I have held a job so the website will update automatically.-->
             <p id="mtd">With over <span id="age"></span> years in a wide array of career fields I have had many experiences that qualify me for many jobs. I have worked in landscaping, construction, and electronics fields. I spent 23 years in the United States Marine Corps, Marine Corps Reserves, Air Force and Air National Guard. For most of those years I was a vehicle mechanic, tow vehicle operator and aircraft mechanic. I have been licensed to drive tactical vehicles ranging from the Jeep to tractor-trailers and civilian vehicles up to and including 29 passenger buses. I have operated forklifts up to and including a 10,000-pound all-terrain forklift and other special equipment required for the handling of cargo and processing of aircraft. I have performed all tasks related to air travel including passenger check-in and transportation, baggage handling, towing aircraft and directing aircraft to parking spots and even piloting KC-135E and R model aircraft. My experience in the military has trained me for making management decisions and supervising others. There is no vehicle I cannot operate and there is no job I cannot perform with the proper training.</p>
         </div>
