--- a/academic.html
+++ b/academic.html
@@ -34,8 +34,8 @@
                     <p class="ccp_text text1">Community College of Philadelphia</p>
                     <p class="ccp_text text2">Philadelphia, Pennsylvania</p>
                     <p class="ccp_text text2">Computer Science</p>
-                    <p class="ccp_text text2">2023 - 2024</p>
-                    <p class="ccp_text text3">I'm pursuing my Computer Science degree by taking 4 classes.  They are Precalculus, Computer Science I, English Composition I, and Elementary Spanish.  The Precalculus class is a prerequisite for Calculus which I will be taking once I transfer to Penn State.</p>
+                    <p class="ccp_text text2">2023 - 2023</p>
+                    <p class="ccp_text text3">I'm pursuing my Computer Science degree by taking 4 classes at this community college.  Once I pass the prerequisite classes, I will be transferring to Penn State University to complete my degree.</p>
                 </div>
             </div>
             <div class="row">
