fixed some bugs

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <section class="row">
                 <!-- Contact Me link connects to contact.html page, LinkedIn link connects to my LinkedIn page and My GitHub link connects to my GitHub page -->
                 <p class="col-md-4 contact"><i class="fa-solid fa-phone"></i> <a class="context" href="contact.html">Contact Me</a></p>
-                <p class="col-md-4 contact"><i class="fa-brands fa-linkedin"></i> <a class="context" href="http://www.linkedin.com/in/ralph-mccloskey-899680a4">LinkedIn</a></p>
-                <p class="col-md-4 contact"><i class="fa-brands fa-github"></i> <a class="context" href="http://www.github.com/Rafagithub135">My GitHub Account</a></p>
+                <p class="col-md-4 contact"><i class="fa-brands fa-linkedin"></i> <a class="context" href="https://www.linkedin.com/in/ralph-mccloskey-899680a4">LinkedIn</a></p>
+                <p class="col-md-4 contact"><i class="fa-brands fa-github"></i> <a class="context" href="https://www.github.com/Rafagithub135">My GitHub Account</a></p>
             </section>
         </div>
     </header>
@@ -99,7 +99,7 @@
     </div>
     <!-- hitwebcounter Code START  <a href="https://www.hitwebcounter.com" target="_blank"></a>-->
     <img src="https://hitwebcounter.com/counter/counter.php?page=8300263&style=0025&nbdigits=7&type=page&initCount=0"
-         title="Free Counter" Alt="web counter" border="0" class="counter"/>
+         title="Free Counter" Alt="web counter" class="counter"/>
 </div>
 <script src="js/functions.js"></script>
 <script>document.getElementById("age").innerHTML = calculateAge(new Date())</script>
