added java code to run the encoding software

--- a/encoding.html
+++ b/encoding.html
@@ -10,7 +10,7 @@
 <body>
 <div>
     <h1>Encode Your Phrase</h1>
-    <form>
+    <form name="encode" method="post" action="encoding.html">
         <div class="mb-3">
         <label for="input" class="form-label">Enter your phrase here:</label>
         <input type="text" class="form-control" id="input" aria-describedby="phrase" placeholder="Please be patient, I'm working on this page.">
