--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
                 </div>
             </section>
             <hr class="sand">
-            <section class="col-md-12 mx-auto">
+            <section class="col-md-12 buttons mx-auto">
                 <div class="d-flex justify-content-center">
                     <a href="https://www.marines.com"><img src="Images/usmcveteranpin.jpg" alt="United States Marine Corps Veteran" id="usmcvet"></a>
+                    <img src="#" alt="" class="space">
                     <a href="https://www.airforce.com"><img src="Images/air-force-veteran.png" alt="United States Air Force Veteran" id="afvet"></a>
                 </div>
             </section>
