added weathermap to homepage and limited api calls per day to 1000

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
                     <p class="link">If you would like to encode a word, sentence, or paragraph, I have created a program to do so. Just <a href="encoding.html">click here</a> to go to the page.</p>
                 </div>
             </section>
+            <section class="col-md-6">
+                <div class="reference-links mt-0 row row-md-2">
+                    <h3 class="text-primary"><a href="weathermap.html">CHECK THE WEATHER ANYWHERE IN THE WORLD!</a></h3>
+                    <p class="link">To see what the weather forecast is for the next seven days, <a href="weathermap.html">click here</a> to go to the page.</p>
+                </div>
+            </section>
             <hr class="sand">
             <section class="col-md-12 buttons mx-auto">
                 <div class="d-flex justify-content-center">
