changed weathermap link to broken until I can fix bug

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </section>
             <section class="col-md-6">
                 <div class="reference-links mt-0 row row-md-2">
-                    <h3 class="text-primary"><a href="weathermap.html">CHECK THE WEATHER ANYWHERE IN THE WORLD!</a></h3>
-                    <p class="link">To see what the weather forecast is for the next seven days, <a href="weathermap.html">click here</a> to go to the page.</p>
+                    <h3 class="text-primary"><a href="broken.html">CHECK THE WEATHER ANYWHERE IN THE WORLD!</a></h3>
+                    <p class="link">To see what the weather forecast is for the next seven days, <a href="broken.html">click here</a> to go to the page.</p>
                 </div>
             </section>
             <hr class="sand">
