corrected ribbon rack and descriptions

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -26,7 +26,7 @@
             <li>Meritorious Service Ribbon With 4 Bronze Oak Leafs (pictured here with "R")</li>
             <li>United States Marine Corps Presidential Unit Citation</li>
             <li>Air Force Outstanding Unit Ribbon</li>
-            <li>United States Marine Corps Good Conduct Medal</li>
+            <li>Selected Marine Corps Reserve Medal</li>
             <li>National Defense Service Medal Ribbon</li>
             <li>Global War On Terrorism Expeditionary Ribbon</li>
             <li>Air Force Longevity Service Ribbon With 1 Bronze Oak Leaf</li>
