changed link to war game from code to page to play the game

--- a/development_projects.html
+++ b/development_projects.html
@@ -37,11 +37,10 @@
         <a href="https://github.com/Villegas-McCloskey-Movies/Movie-Project">
             <li>Movie Project (Villegas/McCloskey)</li>
         </a>
-        <a href="https://github.com/Rafagithub135/Games/tree/main/War">
+        <a href="war.html">
             <li>War Card Game (Web Dev Simplified/McCloskey)</li>
         </a>
-        <a href="https://sandlotconnect.xyz:8080/"><li>Sandlot Connect (Wilson/McCloskey/Razo)</li>
-        </a>
+        <li>Sandlot Connect (Wilson/McCloskey/Razo)</li>
         <a href="https://github.com/Rafagithub135/cookie">
             <li>Cookie's Place website (McCloskey - I'm currently working on this site)</li>
         </a>
