removed in-line css from html page

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <!--Marine Corps colors hr dividers-->
         <div class="row row-cols-2">
             <section class="col-6 p-0">
-                <hr style="border: 3px #BA152F solid; opacity: 1">
+                <hr class="hr1">
             </section>
             <section class="col-6 p-0">
-                <hr style="border: 3px #F7CE00 solid; opacity: 1">
+                <hr class="hr2">
             </section>
             <!--resume content-->
             <div class="col-12">
