added responsive web design certificate from free code camp to awards and decs page

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -40,6 +40,7 @@
     <h2>Other Awards, Certifications and Decorations</h2>
     <hr>
     <section class="certs">
+        <a href="respwebdesign.html"><img src="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png" alt="freeCodeCamp Certificate of Completion - Responsive Web Design"></a>
         <a href="codeup.html"><img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development"></a>
         <a href="appreciation.html"><img src="Images/certificate_of%20_appreciation_barak_obama.jpg" alt="Certificate of Appreciation From President Barak Obama"></a>
         <a href="retirement.html"><img src="Images/certificate_of_retirement.jpg" alt="Certificate of Retirement from the United States Air Force"></a>
