changed some links from code to actual pages on development projects page

--- a/development_projects.html
+++ b/development_projects.html
@@ -10,9 +10,7 @@
 <h3>Click On A Link To View A Project</h3>
 <div>
     <ol>
-        <a href="https://rafagithub135.github.io/">
-            <li>Resume web page (McCloskey)</li>
-        </a>
+        <li><a href="http://rafagithub135.github.io"> Resume web page (McCloskey)</a></li>
         <a href="https://github.com/MarcusandRalphorg/media-queries">
             <li>Codeup Media Queries (Marcus/Ralph)</li>
         </a>
@@ -38,9 +36,9 @@
             <li>Movie Project (Villegas/McCloskey)</li>
         </a>
         <a href="war.html">
-            <li>War Card Game (Web Dev Simplified/McCloskey)</li>
+            <li><a href="war.html">War Card Game (Web Dev Simplified/McCloskey)</a></li>
         </a>
-        <li>Sandlot Connect (Wilson/McCloskey/Razo)</li>
+        <li>Sandlot Connect (Wilson/McCloskey/Razo) - Deactivated</li>
         <a href="https://github.com/Rafagithub135/cookie">
             <li>Cookie's Place website (McCloskey - I'm currently working on this site)</li>
         </a>
